intel/bench_214/extr_.reactossdklib3rdpartystlportsrcc_locale_win32c_locale_win32.c___ConvertTime_with_main/log.txt
bench_214/extr_.reactossdklib3rdpartystlportsrcc_locale_win32c_locale_win32.c___ConvertTime_with_main/extr_.reactossdklib3rdpartystlportsrcc_locale_win32c_locale_win32.c___ConvertTime_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
